# InmueblesApp

./: .dockerignore  .gcloudignore  .gitignore  Dockerfile  Dockerfile.backend  Dockerfile.frontend  Dockerfile.ollama  Dockerfile.pipeline  Dockerfile.serving  Dockerfile.streamlit  README.md  cli.py  cloudbuild.yaml  custom_transformer.py  docker-compose.yml  main.py  ml.ipynb  pyproject.toml  requirements.txt  template.py  test.conf  test.template  tests.py  zenml-setup.sh
.agents/rules/: git-actions.md
.cursor/rules/: deployment-assistant.mdc
backend/: database.py  main.py  utils.py
backend/routers/: predict.py  recommend.py  stats.py
frontend/: index.html  package-lock.json  package.json  vite.config.js
frontend/src/: App.jsx  index.css
inmueblesapp/: app.py  cli.py  database.py  utils.py
inmueblesapp/.streamlit/: config.toml
inmueblesapp/pages/: monitoring.py  prediction.py  recommendation.py
inmueblesapp/serving/: main.py
inmueblesapp/steps/: data_loader.py  data_preprocessor.py
mlruns/0/: meta.yaml
notebooks/: 01_manual_feature_inspection.ipynb  02_processing_data.ipynb  03_model_evaluation.ipynb  04_qdrant_testing.ipynb  05_mongo_testing.ipynb  manual_feature_inspection.ipynb  ml.ipynb  processing_data.ipynb  tests.ipynb
pipelines/: cleaning.py  scrapping.py  training.py
pipelines/utils/: finca_raiz.py  optimize.py  (+1 more)
src/: app.py  config.json  database.py  embedding.py  evaluate.py  fr_scrapper.py  preprocess.py  training.py  update_qdrant.py  utils.py  workflow.py
tests/: test_cleaning.py  test_scrapping.py  test_training.py
(+15 files in other folders)
